--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -92,7 +92,7 @@
             <div class="page-header">
                 <h1>Pok&eacute;mon Battle Companion! <small>what type are you planning to battle?</small></h1>
             </div>
-            <div>
+            <div style="cursor: pointer;">
                 <img src="bug.png" onclick="onCreatureClick(goodForBug, badForBug)" title="Bug"/>
                 <img src="dark.png"  onclick="onCreatureClick(goodForDark, badForDark)" title="Dark"/>
                 <img src="dragon.png"  onclick="onCreatureClick(goodForDragon, badForDragon)" title="Dragon" />
