--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -162,6 +162,22 @@
                     <img id="badWater" src="water.png" />
                 </div>
             </div>
+            <div class="media" style="margin-top:150px;">
+                <div class="media-left">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="KD7UN4JWZJS9Y">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">If you like this page, please consider sending me $1 to keep it up!</h4>
+                </div>
+            </div>
         </div>
+        
+       
+
     </body>
 </html>
