with meta info in head

--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -20,6 +20,10 @@
 <html>
     <head>
         <title>Pokemon Battle Companion</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="The Pokemon battle companion tells you what Pokemon types would be effective or ineffective against a particular opponent type.">
+        <meta name="keywords" content="Pokemon, gym, battle, type, combat, power">
+        <meta name="author" content="Jay Hodgson">
     </head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script type="text/javascript">
