add titles to all images

--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -121,24 +121,24 @@
                     <h3 class="panel-title">GOOD CHOICES</h3>
                 </div>
                 <div id="goodPicks" class="panel-body">
-                    <img id="goodBug" src="bug.png" />
-                    <img id="goodDark" src="dark.png" />
-                    <img id="goodDragon" src="dragon.png" />
-                    <img id="goodElectric" src="electric.png" />
-                    <img id="goodFairy" src="fairy.png" />
-                    <img id="goodFighting" src="fighting.png" />
-                    <img id="goodFire" src="fire.png" />
-                    <img id="goodFlying" src="flying.png" />
-                    <img id="goodGhost" src="ghost.png" />
-                    <img id="goodGrass" src="grass.png" />
-                    <img id="goodGround" src="ground.png" />
-                    <img id="goodIce" src="ice.png" />
-                    <img id="goodNormal" src="normal.png" />
-                    <img id="goodPoison" src="poison.png" />
-                    <img id="goodPsychic" src="psychic.png" />
-                    <img id="goodRock" src="rock.png" />
-                    <img id="goodSteel" src="steel.png" />
-                    <img id="goodWater" src="water.png" />
+                    <img id="goodBug" src="bug.png"  title="Bug"/>
+                    <img id="goodDark" src="dark.png"  title="Dark"/>
+                    <img id="goodDragon" src="dragon.png" title="Dragon"/>
+                    <img id="goodElectric" src="electric.png" title="Electric"/>
+                    <img id="goodFairy" src="fairy.png" title="Fairy"/>
+                    <img id="goodFighting" src="fighting.png" title="Fighting"/>
+                    <img id="goodFire" src="fire.png" title="Fire"/>
+                    <img id="goodFlying" src="flying.png" title="Flying"/>
+                    <img id="goodGhost" src="ghost.png" title="Ghost"/>
+                    <img id="goodGrass" src="grass.png" title="Grass"/>
+                    <img id="goodGround" src="ground.png" title="Ground"/>
+                    <img id="goodIce" src="ice.png" title="Ice"/>
+                    <img id="goodNormal" src="normal.png" title="Normal"/>
+                    <img id="goodPoison" src="poison.png" title="Poison"/>
+                    <img id="goodPsychic" src="psychic.png" title="Psychic"/>
+                    <img id="goodRock" src="rock.png" title="Rock"/>
+                    <img id="goodSteel" src="steel.png" title="Steel"/>
+                    <img id="goodWater" src="water.png"  title="Water"/>
                 </div>
             </div>
             <div id="ineffectiveAttackUI" class="panel panel-danger"  style="display: none;">
@@ -146,24 +146,24 @@
                     <h3 class="panel-title">BAD CHOICES</h3>
                 </div>
                 <div id="badPicks" class="panel-body">
-                    <img id="badBug" src="bug.png" />
-                    <img id="badDark" src="dark.png" />
-                    <img id="badDragon" src="dragon.png" />
-                    <img id="badElectric" src="electric.png" />
-                    <img id="badFairy" src="fairy.png" />
-                    <img id="badFighting" src="fighting.png" />
-                    <img id="badFire" src="fire.png" />
-                    <img id="badFlying" src="flying.png" />
-                    <img id="badGhost" src="ghost.png" />
-                    <img id="badGrass" src="grass.png" />
-                    <img id="badGround" src="ground.png" />
-                    <img id="badIce" src="ice.png" />
-                    <img id="badNormal" src="normal.png" />
-                    <img id="badPoison" src="poison.png" />
-                    <img id="badPsychic" src="psychic.png" />
-                    <img id="badRock" src="rock.png" />
-                    <img id="badSteel" src="steel.png" />
-                    <img id="badWater" src="water.png" />
+                    <img id="badBug" src="bug.png" title="Bug"/>
+                    <img id="badDark" src="dark.png"  title="Dark"/>
+                    <img id="badDragon" src="dragon.png" title="Dragon"/>
+                    <img id="badElectric" src="electric.png" title="Electric"/>
+                    <img id="badFairy" src="fairy.png" title="Fairy"/>
+                    <img id="badFighting" src="fighting.png" title="Fighting"/>
+                    <img id="badFire" src="fire.png" title="Fire"/>
+                    <img id="badFlying" src="flying.png" title="Flying"/>
+                    <img id="badGhost" src="ghost.png"  title="Ghost"/>
+                    <img id="badGrass" src="grass.png"  title="Grass"/>
+                    <img id="badGround" src="ground.png" title="Ground"/>
+                    <img id="badIce" src="ice.png" title="Ice"/>
+                    <img id="badNormal" src="normal.png" title="Normal"/>
+                    <img id="badPoison" src="poison.png" title="Poison"/>
+                    <img id="badPsychic" src="psychic.png" title="Psychic"/>
+                    <img id="badRock" src="rock.png"  title="Rock"/>
+                    <img id="badSteel" src="steel.png" title="Steel"/>
+                    <img id="badWater" src="water.png"  title="Water"/>
                 </div>
             </div>
             <div class="media" style="margin-top:150px;">
