add favicon from https://www.iconfinder.com/icons/66543/pokeball_pokemon_icon

--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -20,6 +20,7 @@
 <html>
     <head>
         <title>Pokemon Battle Companion</title>
+        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
         <meta charset="UTF-8">
         <meta name="description" content="The Pokemon battle companion tells you what Pokemon types would be effective or ineffective against a particular opponent type.">
         <meta name="keywords" content="Pokemon, gym, battle, type, combat, power">
