--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -23,7 +23,7 @@
         <link rel="shortcut icon" type="image/png" href="favicon.png"/>
         <meta charset="UTF-8">
         <meta name="description" content="The Pokemon battle companion tells you what Pokemon types would be effective or ineffective against a particular opponent type.">
-        <meta name="keywords" content="Pokemon, gym, battle, type, combat, power">
+        <meta name="keywords" content="Pokemon, gym, battle, type, combat, power, strength, weakness">
         <meta name="author" content="Jay Hodgson">
     </head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -88,34 +88,141 @@
         }
 
         onload = function f() {
-            hideAll();
         }
         
     </script>
     <body>
         <div class="container">
             <div class="page-header">
-                <h1>Pok&eacute;mon Battle Companion! <small>what type are you planning to battle?</small></h1>
+                <h1 style="color:#e71d1d">Pok&eacute;mon Battle Companion! <small>what type are you planning to battle?</small></h1>
             </div>
-            <div style="cursor: pointer;">
-                <img src="bug.png" onclick="onCreatureClick(goodForBug, badForBug)" title="Bug"/>
-                <img src="dark.png"  onclick="onCreatureClick(goodForDark, badForDark)" title="Dark"/>
-                <img src="dragon.png"  onclick="onCreatureClick(goodForDragon, badForDragon)" title="Dragon" />
-                <img src="electric.png" onclick="onCreatureClick(goodForElectric, badForElectric)" title="Electric"/>
-                <img src="fairy.png" onclick="onCreatureClick(goodForFairy, badForFairy)" title="Fairy"/>
-                <img src="fighting.png" onclick="onCreatureClick(goodForFighting, badForFighting)" title="Fighting"/>
-                <img src="fire.png" onclick="onCreatureClick(goodForFire, badForFire)" title="Fire"/>
-                <img src="flying.png" onclick="onCreatureClick(goodForFlying, badForFlying)" title="Flying"/>
-                <img src="ghost.png" onclick="onCreatureClick(goodForGhost, badForGhost)" title="Ghost"/>
-                <img src="grass.png" onclick="onCreatureClick(goodForGrass, badForGrass)" title="Grass"/>
-                <img src="ground.png" onclick="onCreatureClick(goodForGround, badForGround)" title="Ground"/>
-                <img src="ice.png" onclick="onCreatureClick(goodForIce, badForIce)" title="Ice"/>
-                <img src="normal.png" onclick="onCreatureClick(goodForNormal, badForNormal)" title="Normal"/>
-                <img src="poison.png" onclick="onCreatureClick(goodForPoison, badForPoison)" title="Poison"/>
-                <img src="psychic.png" onclick="onCreatureClick(goodForPsychic, badForPsychic)" title="Psychic"/>
-                <img src="rock.png" onclick="onCreatureClick(goodForRock, badForRock)" title="Rock"/>
-                <img src="steel.png" onclick="onCreatureClick(goodForSteel, badForSteel)" title="Steel"/>
-                <img src="water.png" onclick="onCreatureClick(goodForWater, badForWater)" title="Water"/>
+            <div class="row" style="cursor: pointer; margin-top:30px;">
+	            <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForBug, badForBug)">
+                    <div class="thumbnail"><img src="bug.png" title="Bug"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Bug</h3>
+                        </div>
+                    </div>
+	            </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForDark, badForDark)">
+                    <div class="thumbnail"><img src="dark.png" title="Dark"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Dark</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForDragon, badForDragon)">
+                    <div class="thumbnail"><img src="dragon.png" title="Dragon" />
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Dragon</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForElectric, badForElectric)">
+                    <div class="thumbnail"><img src="electric.png"  title="Electric"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Electric</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForFairy, badForFairy)" >
+                    <div class="thumbnail"><img src="fairy.png" title="Fairy"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Fairy</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForFighting, badForFighting)">
+                    <div class="thumbnail"><img src="fighting.png"  title="Fighting"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Fighting</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForFire, badForFire)">
+                    <div class="thumbnail"><img src="fire.png"  title="Fire"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Fire</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForFlying, badForFlying)">
+                    <div class="thumbnail"><img src="flying.png"  title="Flying"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Flying</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForGhost, badForGhost)">
+                    <div class="thumbnail"><img src="ghost.png"  title="Ghost"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Ghost</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForGrass, badForGrass)">
+                    <div class="thumbnail"><img src="grass.png"  title="Grass"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Grass</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForGround, badForGround)">
+                    <div class="thumbnail"><img src="ground.png"  title="Ground"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Ground</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForIce, badForIce)">
+                    <div class="thumbnail"><img src="ice.png"  title="Ice"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Ice</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForNormal, badForNormal)">
+                    <div class="thumbnail"><img src="normal.png"  title="Normal"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Normal</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(goodForPoison, badForPoison)">
+                    <div class="thumbnail"><img src="poison.png" title="Poison"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Poison</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(goodForPsychic, badForPsychic)">
+                    <div class="thumbnail"><img src="psychic.png" title="Psychic"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Psychic</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(goodForRock, badForRock)">
+                    <div class="thumbnail"><img src="rock.png" title="Rock"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Rock</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(goodForSteel, badForSteel)">
+                    <div class="thumbnail"><img src="steel.png"  title="Steel"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Steel</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(goodForWater, badForWater)">
+                    <div class="thumbnail"><img src="water.png" title="Water"/>
+                        <div class="caption text-center">
+                            <h3 style="margin-top:5px;margin-bottom:0px;">Water</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="effectiveAttackUI" class="panel panel-success" style="margin-top:20px; display: none;">
                <div class="panel-heading">
@@ -167,17 +274,19 @@
                     <img id="badWater" src="water.png"  title="Water"/>
                 </div>
             </div>
-            <div class="media" style="margin-top:150px;">
-                <div class="media-left">
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="KD7UN4JWZJS9Y">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">If you like this page, please consider sending me $1 to keep it up!</h4>
+            <div class="alert alert-success" role="alert">
+                <div class="media" style="margin-top:20px;">
+                    <div class="media-left">
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="KD7UN4JWZJS9Y">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading" style="margin-left:20px;">If you like this page, please consider sending me $1 to keep it up!</h4>
+                    </div>
                 </div>
             </div>
         </div>
