--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -100,6 +100,7 @@
             for (var i=0, item; item = bad[i]; i++) {
                 document.getElementById("bad"+item).style.display = 'inline';
             }
+            document.getElementById("effectiveAttackUI").scrollIntoView();
         }
 
         onload = function f() {
