--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -113,126 +113,126 @@
                 <h1 style="color:#e71d1d">Pok&eacute;mon Battle Companion! <small>what type are you planning to battle?</small></h1>
             </div>
             <div class="row" style="cursor: pointer; margin-top:30px;">
-	            <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForBug, badForBug)">
+	            <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForBug, badForBug)">
                     <div class="thumbnail"><img src="bug.png" title="Bug"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Bug</h3>
                         </div>
                     </div>
 	            </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForDark, badForDark)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForDark, badForDark)">
                     <div class="thumbnail"><img src="dark.png" title="Dark"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Dark</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForDragon, badForDragon)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForDragon, badForDragon)">
                     <div class="thumbnail"><img src="dragon.png" title="Dragon" />
                         <div class="caption text-center">
                             <h3 class="caption-heading">Dragon</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForElectric, badForElectric)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForElectric, badForElectric)">
                     <div class="thumbnail"><img src="electric.png"  title="Electric"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Electric</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForFairy, badForFairy)" >
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForFairy, badForFairy)" >
                     <div class="thumbnail"><img src="fairy.png" title="Fairy"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Fairy</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForFighting, badForFighting)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForFighting, badForFighting)">
                     <div class="thumbnail"><img src="fighting.png"  title="Fighting"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Fighting</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForFire, badForFire)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForFire, badForFire)">
                     <div class="thumbnail"><img src="fire.png"  title="Fire"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Fire</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForFlying, badForFlying)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForFlying, badForFlying)">
                     <div class="thumbnail"><img src="flying.png"  title="Flying"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Flying</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForGhost, badForGhost)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForGhost, badForGhost)">
                     <div class="thumbnail"><img src="ghost.png"  title="Ghost"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Ghost</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForGrass, badForGrass)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForGrass, badForGrass)">
                     <div class="thumbnail"><img src="grass.png"  title="Grass"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Grass</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForGround, badForGround)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForGround, badForGround)">
                     <div class="thumbnail"><img src="ground.png"  title="Ground"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Ground</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForIce, badForIce)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForIce, badForIce)">
                     <div class="thumbnail"><img src="ice.png"  title="Ice"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Ice</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForNormal, badForNormal)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForNormal, badForNormal)">
                     <div class="thumbnail"><img src="normal.png"  title="Normal"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Normal</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(this,goodForPoison, badForPoison)">
+                <div class="col-xs-4 col-sm-3 col-md-2"  onclick="onCreatureClick(this,goodForPoison, badForPoison)">
                     <div class="thumbnail"><img src="poison.png" title="Poison"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Poison</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(this,goodForPsychic, badForPsychic)">
+                <div class="col-xs-4 col-sm-3 col-md-2"  onclick="onCreatureClick(this,goodForPsychic, badForPsychic)">
                     <div class="thumbnail"><img src="psychic.png" title="Psychic"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Psychic</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(this,goodForRock, badForRock)">
+                <div class="col-xs-4 col-sm-3 col-md-2"  onclick="onCreatureClick(this,goodForRock, badForRock)">
                     <div class="thumbnail"><img src="rock.png" title="Rock"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Rock</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2" onclick="onCreatureClick(this,goodForSteel, badForSteel)">
+                <div class="col-xs-4 col-sm-3 col-md-2" onclick="onCreatureClick(this,goodForSteel, badForSteel)">
                     <div class="thumbnail"><img src="steel.png"  title="Steel"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Steel</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-2"  onclick="onCreatureClick(this,goodForWater, badForWater)">
+                <div class="col-xs-4 col-sm-3 col-md-2"  onclick="onCreatureClick(this,goodForWater, badForWater)">
                     <div class="thumbnail"><img src="water.png" title="Water"/>
                         <div class="caption text-center">
                             <h3 class="caption-heading">Water</h3>
