--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -31,6 +31,9 @@
             margin-top:5px;
             margin-bottom:0px;
         }
+        .thumbnail img {
+            padding-top: 10px;
+        }
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script type="text/javascript">
