add some kind of disclaimer

--- a/pokemon-battle-companion/index.html
+++ b/pokemon-battle-companion/index.html
@@ -322,6 +322,10 @@
                     </div>
                 </div>
             </div>
+            <blockquote>
+                This website is not affiliated with, maintained, authorized, endorsed or sponsored by Niantic Inc., Pokemon, Nintendo / Creatures Inc. / GAME FREAK inc. or any of its affiliates. This is an independent, unofficial site. All information contained on this site is UNofficial. 
+            </blockquote>
+
         </div>
         
        
